--- a/Unituness/Views/Midia/Detalhe.cshtml
+++ b/Unituness/Views/Midia/Detalhe.cshtml
@@ -173,7 +173,7 @@
                         <div class="x-container max width">
 
                             <h1 class="visually-hidden">Unitunes</h1>
-                            <a href="https://theme.co/x/demo/shop/integrity/" class="x-brand text" title="Unitunes Demo">
+                            <a href="/" class="x-brand text" title="Unitunes Demo">
                                 Unitunes
                             </a>
                             <a href="#" class="x-btn-navbar collapsed" data-toggle="collapse" data-target=".x-nav-wrap.mobile">
@@ -222,7 +222,7 @@
 
                                 <div itemprop="offers" itemscope="" itemtype="http://schema.org/Offer">
 
-                                    <p class="price"><span class="amount">R$ {{midia.Preco}}</span></p>
+                                    <p class="price"><span class="amount">R$ {{midia.PrecoVenda.formataDinheiro(2,3)}}</span></p>
                                 </div>
                                 <div itemprop="description">
                                     <p>{{midia.Descricao}}</p>
