--- a/Unituness/Views/Home/Index.cshtml
+++ b/Unituness/Views/Home/Index.cshtml
@@ -103,7 +103,7 @@
 
 <body class="home archive post-type-archive post-type-archive-product custom-background woocommerce woocommerce-page x-integrity x-integrity-light x-navbar-fixed-top-active x-full-width-layout-active x-content-sidebar-active x-v4_0_1 cornerstone-v1_0_1">
 
-    <div id="top" class="site">
+    <div id="top" class="site" ng-app="app_sysadmin">
         <header class="masthead masthead-inline" role="banner">
             <div class="x-navbar-wrap">
                 <div class="x-navbar">
@@ -128,6 +128,9 @@
                                         <li id="menu-item-112" class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-112">
                                             <a href="/login/delete"><span>Logout</span></a>
                                         </li>
+                                        <li id="menu-item-112" class="menu-item menu-item-type-post_type menu-item-object-page  menu-item-112">
+                                            <a href="/admin"><span>Admin</span></a>
+                                        </li>
                                     }
                                     else
                                     {
@@ -146,19 +149,19 @@
             <h1 class="h-landmark"><span>Unitunes</span></h1>
             <p class="p-landmark-sub"><span>Este é o Unitunes, uma mini versão de loja de venda de faixas e discos musicais. Este demo é tão 10 que todos os integrantes do trabalho merecem tirar 10.</span></p>
         </header>
-        <div class="x-container max width offset">
+        <div class="x-container max width offset" ng-controller="midiahomecontroller">
             <div class="center" role="main">
                 <ul class="products cols-3">
 
-                    <li class="last post-83 product type-product status-publish has-post-thumbnail product_cat-albums product_cat-music downloadable shipping-taxable purchasable product-type-simple product-cat-albums product-cat-music instock">
+                    <li ng-repeat="midia in midias" class="last post-83 product type-product status-publish has-post-thumbnail product_cat-albums product_cat-music downloadable shipping-taxable purchasable product-type-simple product-cat-albums product-cat-music instock">
 
                         <div class="entry-product">
-                            <div class="entry-featured"><a href="https://theme.co/x/demo/shop/integrity/product/woo-album-3/"><img width="862" height="862" src="https://theme.co/x/demo/shop/integrity/wp-content/uploads/sites/2/2013/06/cd_3_flat.jpg" class="attachment-entry wp-post-image" /></a></div><div class="entry-wrap">
+                            <div class="entry-featured"><a href="/midia/detalhe/{{midia.Id}}"><img width="862" height="862" src="https://theme.co/x/demo/shop/integrity/wp-content/uploads/sites/2/2013/06/cd_3_flat.jpg" class="attachment-entry wp-post-image" /></a></div><div class="entry-wrap">
                                 <header class="entry-header">
                                     <h3>
-                                        <a href="https://theme.co/x/demo/shop/integrity/product/woo-album-3/">Woo Album #1</a>
+                                        <a href="/midia/detalhe/{{midia.Id}}">{{midia.Nome}}</a>
                                     </h3>
-                                    <span class="price"><span class="amount">&#36;9.00</span></span>
+                                    <span class="price"><span class="amount">R&#36; {{midia.PrecoVenda.formataDinheiro(2,3)}}</span></span>
                                 </header>
                             </div>
                         </div>
@@ -169,6 +172,10 @@
         </div>
     </div> <!-- END #top.site -->
 
+
+    <script src="/scripts/angular_1.2.9.min.js"></script>
+    <script src="/scripts/angular_app.js"></script>
+    <script src="/scripts/view/midia.js"></script>
 
     <script type='text/javascript' src='//theme.co/x/demo/shop/integrity/wp-content/plugins/woocommerce/assets/js/jquery-blockui/jquery.blockUI.min.js?ver=2.60'></script>
     <script type='text/javascript'>
