--- a/Unituness/Views/Midia/Edit.cshtml
+++ b/Unituness/Views/Midia/Edit.cshtml
@@ -1,16 +1,16 @@
 ﻿<h2>Edição de Midias</h2>
-<div id="page-wrapper">
+<div id="page-wrapper" ng-controller="midia_edit_controller">
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">
                 Dados da Midia
             </h1>
-            <button id="bntSalvar" type="button" class="btn btn-success navbar-right" ng-click="salvar()" style="margin-bottom: 15px;">Salvar</button>
+            <button id="bntSalvar" type="button" class="btn btn-success navbar-right" ng-click="save()" style="margin-bottom: 15px;">Salvar</button>
         </div>
         <!-- /.col-lg-12 -->
     </div>
     <!-- /.row -->
-    <div class="row" ng-controller="">
+    <div class="row">
         <div class="col-lg-12">
             <div class="row">
                 <div class="form-group col-lg-3">
@@ -19,16 +19,16 @@
                 </div>
                 <div class="form-group col-lg-3">
                     <label>Preço (R$)</label>
-                    <input class="form-control ng-pristine ng-valid money" money ng-model="midia.Preco">
+                    <input class="form-control ng-pristine ng-valid money" money ng-model="midia.Preco" ng-change="calcular()">
 
                 </div>
                 <div class="form-group col-lg-3">
                     <label>Taxa Unitunes (10%)</label>
-                    <input class="form-control ng-pristine ng-valid" disabled>
+                    <input class="form-control ng-pristine ng-valid" ng-value="midia.TaxaUnitunes.formataDinheiro(2,3)" disabled>
                 </div>
                 <div class="form-group col-lg-3">
                     <label>Valor de Venda (R$)</label>
-                    <input class="form-control ng-pristine ng-valid" disabled ng-model="pessoa.Nome">
+                    <input class="form-control ng-pristine ng-valid" disabled ng-value="midia.PrecoVenda.formataDinheiro(2,3)">
                 </div>
             </div>
         </div>
