--- a/Unituness/Views/Midia/List.cshtml
+++ b/Unituness/Views/Midia/List.cshtml
@@ -2,22 +2,27 @@
 <h2>Listagem de Midias</h2>
 <div class="panel">
     <div class="panel-heading">
+        <button id="bntSalvar" type="button" class="btn btn-dark-gray navbar-right" onclick="window.location = '/midia/edit'" style="margin-bottom: 15px;">Novo</button>
     </div>
     <div class="panel-body" ng-controller="midia_list_controller">
         <div class="table-responsive">
             <table class="dataTable table table-striped table-hover table-bordered" id="allan">
                 <thead>
                     <tr>
+                        <th class="center"></th>
                         <th class="center">Nome</th>
                         <th class="center">Preço Venda (R$)</th>
+                        <th class="center"></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr class="gradeX" ng-repeat="midia in midias">
+                        <th class="center"><a href="/midia/edit/{{midia.Id}}">Editar</a></th>
                         <td>
                             {{midia.Nome}}
                         </td>
-                        <td>{{midia.Preco.formataDinheiro(3,2)}}</td>
+                        <td>{{midia.PrecoVenda.formataDinheiro(2,3)}}</td>
+                        <th class="center"><a ng-click="delete(midia.Id)">Deletar</a></th>
                     </tr>
                 </tbody>
             </table>
@@ -25,3 +30,5 @@
     </div>
     <div class="panel-footer"></div>
 </div> <!-- / first data table sample -->
+
+<script src="/scripts/view/midia.js"></script>
