--- a/Unituness/Views/Vendas/Index.cshtml
+++ b/Unituness/Views/Vendas/Index.cshtml
@@ -3,13 +3,9 @@
 }
 
 <h2>Relatorio de Vendas</h2>
-<div class="panel">
+<div class="panel" ng-controller="vendacontroller">
     <div class="panel-heading">
-        <div class="pull-left"><h4><i class="icon-table"></i> Periodo</h4></div>
-        <div class="tools pull-right">
-            <button type="button" class="btn btn-wht btn-xs"><i class="icon-refresh text-transparent"></i></button>
-            <a href="#" class="close-panel" data-dismiss="panel" aria-hidden="true"><i class="icon-remove text-transparent"></i></a>
-        </div>
+
         <div class="clearfix"></div>
     </div>
     <div class="panel-body">
@@ -17,64 +13,28 @@
             <table class="dataTable table table-striped table-hover table-bordered" id="allan">
                 <thead>
                     <tr>
-                        <th>Browser</th>
-                        <th>Platform(s)</th>
-                        <th>Engine version</th>
-                        <th>CSS grade</th>
+                        <th class="center">Data</th>
+                        <th class="center">Valor Autor (R$)</th>
+                        <th class="center">Taxa Unitunes - 10% (R$)</th>
+                        <th class="center">Total Venda (R$)</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="gradeX">
-                        <td>
-                            Internet
-                            Explorer 4.0
+                    <tr class="gradeX" ng-repeat="venda in vendas">
+                        <td class="center">
+                            {{venda.DataVenda}}
                         </td>
-                        <td>Win 95+</td>
-                        <td class="center">4</td>
-                        <td class="center">X</td>
+                        <td class="center">{{venda.ValorAutor.formataDinheiro(2,3)}}</td>
+                        <td class="center">{{venda.TaxaUnitunes.formataDinheiro(2,3)}}</td>
+                        <td class="center">{{venda.ValorVenda.formataDinheiro(2,3)}}</td>
                     </tr>
-                    <tr class="gradeC">
-                        <td>
-                            Internet
-                            Explorer 5.0
-                        </td>
-                        <td>Win 95+</td>
-                        <td class="center">5</td>
-                        <td class="center">C</td>
-                    </tr>
-                    <tr class="gradeA">
-                        <td>
-                            Internet
-                            Explorer 5.5
-                        </td>
-                        <td>Win 95+</td>
-                        <td class="center">5.5</td>
-                        <td class="center">A</td>
-                    </tr>
-                    <tr class="gradeA">
-                        <td>
-                            Internet
-                            Explorer 6
-                        </td>
-                        <td>Win 98+</td>
-                        <td class="center">6</td>
-                        <td class="center">A</td>
-                    </tr>
-                    <tr class="gradeA">
-                        <td>Internet Explorer 7</td>
-                        <td>Win XP SP2+</td>
-                        <td class="center">7</td>
-                        <td class="center">A</td>
-                    </tr>
-                    <tr class="gradeA">
-                        <td>AOL browser (AOL desktop)</td>
-                        <td>Win XP</td>
-                        <td class="center">6</td>
-                        <td class="center">A</td>
-                    </tr>
+
                 </tbody>
             </table>
         </div>
     </div>
     <div class="panel-footer"></div>
 </div> <!-- / first data table sample -->
+
+<script src="/scripts/view/pagamento.js"></script>
+
